# glpai

./: CMakeCache.txt  CMakeLists.txt  Document.odt  LICENSE  Makefile  README.md  cmake_install.cmake  compile  include  main.cpp  pai  todo.md
classes/actors/: CubeMap.cpp  CubeMap.h  Light.cpp  Light.h  SceneManager.cpp  SceneManager.h  SkyBox.cpp
classes/base/: Camera.cpp  Camera.hpp  Light.cpp  Light.hpp  Mesh.cpp  Mesh.hpp  Transform.cpp  Transform.hpp
classes/cmMath/: matrix4.cpp  matrix4.hpp  vectors.cpp  vectors.hpp
classes/graphics/: CMGL_Program.cpp  CMGL_Program.h  CMGL_Program.hpp  CMGL_Shader.cpp  CMGL_Shader.hpp
classes/opengl/: CMGL_Base.cpp  CMGL_Base.hpp  CMGL_Camera.cpp  CMGL_Camera.hpp  CMGL_CubeMap.cpp  CMGL_CubeMap.hpp  CMGL_DirectLight.cpp  CMGL_DirectLight.hpp  CMGL_Framebuffer.cpp  CMGL_Framebuffer.hpp  CMGL_GameObject.cpp  CMGL_GameObject.hpp  CMGL_Light.hpp  CMGL_Renderer.cpp  CMGL_Renderer.hpp  CMGL_Scene.cpp  CMGL_Scene.hpp  CMGL_Texture.cpp  CMGL_Texture.hpp
classes/system/: Image.cpp  Image.hpp  T0.hpp  U0.cpp  U0.hpp  Window.cpp  Window.hpp
dataDisplay/: Client.hpp
dataDisplay/implementations/: Client.cpp
docs/: todo.md
docs/classes/: CMGL_Base.md  CMGL_GameObject.md  CMGL_Renderer.md  GL_Renderer.md  Image.md  Transform.md  Window.md
docs/directories/: base.md  opengl.md
tools/: B0.cpp  B0.h  B1.cpp  B1.h  B2.cpp  B2.h  Camera.cpp  Camera.h  GameObject.cpp  GameObject.h  Light.cpp  Light.h  Mesh.cpp  Mesh.h  Program.cpp  Program.h  R0.cpp  R0.h  Renderer.h  SceneManager.cpp  SceneManager.h  Shader.cpp  Shader.h  SkyBox.h  T0.cpp  T0.h  Texture.cpp  Texture.h  Transform.cpp  Transform.h  U0.cpp  U0.h  UI_Element.cpp  UI_Element.h  VertexData.cpp  VertexData.h  Window.cpp  Window.h
(+26 files in other folders)
